# Lab1

./: .gitignore
Lab1/: Account.cpp  Account.h  AccountCollection.cpp  AccountCollection.h  BankCard.cpp  BankCard.h  BankScheme.h  ClassDiagram.cd  ClassDiagram1.cd  Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  Menu.cpp  Menu.h  Readme.md  database_tables.h  interfaces.h  main.cpp  main.h  menu_account_card.cpp  menu_account_card.h
course_work/: .gitignore  CMakeLists.txt  README.md
course_work/Reports/: accounts_and_cards_report.json  clients_report.json
course_work/include/: database_tables.h  interfaces.h  list.h  menu_account_card.h  validation_utils.h
course_work/include/Account/: Account.h  AccountRepository.h  AccountService.h
course_work/include/Bank/: Bank.h  BankRepository.h  BankService.h
course_work/include/Card/: Card.h  CardRepository.h  CardService.h  PrevCard.h
course_work/include/Client/: Client.h  ClientRepository.h  ClientService.h
course_work/include/Errors/: CustomExceptions.h
course_work/include/SocialStatus/: SocialStatus.h  SocialStatusRepository.h  SocialStatusService.h
course_work/include/Transaction/: Transaction.h  TransactionService.h
course_work/include/ui/: account_dialog.h  account_widget.h  accounts_and_cards_report.h  accounts_window.h  authorization.h  bank_widget.h  bank_window.h  card_widget.h  cards_window.h  client_dialog.h  client_widget.h  clients_report.h  clients_window.h  mainwindow.h  payments_window.h  registration_window.h  reports.h  transaction_dialog.h
course_work/source/: main.cpp
course_work/source/Account/: Account.cpp  AccountRepository.cpp  AccountService.cpp
course_work/source/Bank/: Bank.cpp  BankRepository.cpp  BankService.cpp
course_work/source/Card/: Card.cpp  CardRepository.cpp  CardService.cpp
course_work/source/Client/: Client.cpp  ClientRepository.cpp  ClientService.cpp
course_work/source/SocialStatus/: SocialStatus.cpp  SocialStatusRepository.cpp  SocialStatusService.cpp
course_work/source/menu/: account_dialog.cpp  account_dialog.ui  account_widget.cpp  accounts_and_cards_report.cpp  accounts_and_cards_report.ui  accounts_window.cpp  accounts_window.ui  bank_widget.cpp  bank_widget.ui  bank_window.cpp  card_widget.cpp  card_widget.ui  cards_window.cpp  cards_window.ui  client_dialog.cpp  client_widget.cpp  client_widget.ui  clients_report.cpp  clients_report.h  clients_report.ui  clients_window.cpp  clients_window.ui  mainwindow.cpp  mainwindow.ui  payments_window.cpp  payments_window.ui  reports.cpp  reports.h  reports.ui  transaction_dialog.cpp  transaction_dialog.ui
course_work/source/menu/Auth and registration/: authorization.cpp  authorization.ui  registration_window.cpp  registration_window.ui
course_work/source/menu/Lists menu/: account_widget.cpp  account_widget.ui  accounts_window.cpp  accounts_window.ui  bank_widget.cpp  bank_widget.ui  bank_window.cpp  bank_window.ui  card_widget.cpp  cards_window.cpp  cards_window.ui  client_dialog.cpp  client_dialog.ui  client_widget.cpp  clients_window.cpp  clients_window.ui
course_work/source/menu/Payments/: payments_window.cpp  payments_window.ui  transaction_dialog.cpp  transaction_dialog.ui
course_work/source/menu/Reports/: accounts_and_cards_report.cpp  accounts_and_cards_report.ui  clients_report.cpp  clients_report.ui  reports.cpp  reports.ui
qt/Widgets/: CMakeLists.txt  mainwindow.ui
